fixed z-index, stopped inheriting colour

--- a/client/src/assets/scss/cards.scss
+++ b/client/src/assets/scss/cards.scss
@@ -1,5 +1,6 @@
 .uiExt-card {
     font-size: $font-size-base + em;
+    color: #000;
 
     &[theme="0"] {
         border: 1px solid $il-border-colour;
