--- a/client/src/assets/scss/windows.scss
+++ b/client/src/assets/scss/windows.scss
@@ -1,3 +1,6 @@
+#uiext-app {
+    z-index: 9999999;
+}
 .trax-window-list {
     width: 433px;
     height: 240px;
